workspace(name = "serviceradar")

# All external dependencies are managed through MODULE.bazel (Bzlmod).
# Avoid declaring http_archive/git_repository here unless absolutely necessary.

http_archive(
    name = "io_buildbuddy_buildbuddy_toolchain",
    integrity = "sha256-e6gcgLHmJHvxCNNbCSQ4OrX8FbGn8TiS7XSVphM1ZU8=",
    strip_prefix = "buildbuddy-toolchain-badf8034b2952ec613970a27f24fb140be7eaf73",
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/badf8034b2952ec613970a27f24fb140be7eaf73.tar.gz"],
)

load("@io_buildbuddy_buildbuddy_toolchain//:deps.bzl", "buildbuddy_deps")

buildbuddy_deps()

load("@io_buildbuddy_buildbuddy_toolchain//:rules.bzl", "buildbuddy")

buildbuddy(name = "buildbuddy_toolchain")

# Prebuilt Perl is not available on remote executors, so we build it from source via
# rules_foreign_cc and point OpenSSL's vendored build to the resulting binary.
http_archive(
    name = "perl_src",
    urls = ["https://www.cpan.org/src/5.0/perl-5.40.0.tar.xz"],
    integrity = "sha256-1TJTAK0mdiTLC31RLP3810+n/gDEVcW1GmvVPl4Znvk=",
    strip_prefix = "perl-5.40.0",
)
