package(default_visibility = ["//visibility:public"])

# pkg/agent
alias(
    name = "agent",
    actual = "//pkg/agent:agent",
)

alias(
    name = "agentgateway",
    actual = "//pkg/agentgateway:agentgateway",
)

# pkg/cli
alias(
    name = "cli",
    actual = "//pkg/cli:cli",
)

# pkg/config
alias(
    name = "config",
    actual = "//pkg/config:config",
)

alias(
    name = "config-bootstrap",
    actual = "//pkg/config/bootstrap:bootstrap",
)

# pkg/consumers
alias(
    name = "db-event-writer",
    actual = "//pkg/consumers/db-event-writer:db-event-writer",
)

# pkg/cpufreq
alias(
    name = "cpufreq",
    actual = "//pkg/cpufreq:cpufreq",
)

# pkg/db
alias(
    name = "db",
    actual = "//pkg/db:db",
)

# pkg/edgeonboarding
alias(
    name = "edgeonboarding",
    actual = "//pkg/edgeonboarding:edgeonboarding",
)

alias(
    name = "edgeonboarding-mtls",
    actual = "//pkg/edgeonboarding/mtls:mtls",
)

# pkg/deviceupdate
alias(
    name = "deviceupdate",
    actual = "//pkg/deviceupdate:deviceupdate",
)

# pkg/grpc
alias(
    name = "grpc",
    actual = "//pkg/grpc:grpc",
)

# pkg/integration_test
alias(
    name = "integration_test",
    actual = "//pkg/integration_test:integration_test",
)

# pkg/datasvc
alias(
    name = "datasvc",
    actual = "//pkg/datasvc:datasvc",
)

# pkg/lifecycle
alias(
    name = "lifecycle",
    actual = "//pkg/lifecycle:lifecycle",
)

# pkg/logger
alias(
    name = "logger",
    actual = "//pkg/logger:logger",
)

# pkg/mapper
alias(
    name = "mapper",
    actual = "//pkg/mapper:mapper",
)


# pkg/models
alias(
    name = "models",
    actual = "//pkg/models:models",
)

# pkg/monitoring
alias(
    name = "monitoring",
    actual = "//pkg/monitoring:monitoring",
)

# pkg/nats
alias(
    name = "nats-accounts",
    actual = "//pkg/nats/accounts:accounts",
)

# pkg/natsutil
alias(
    name = "natsutil",
    actual = "//pkg/natsutil:natsutil",
)

# pkg/scan
alias(
    name = "scan",
    actual = "//pkg/scan:scan",
)

# pkg/swagger
alias(
    name = "swagger",
    actual = "//pkg/swagger:swagger",
)

# pkg/sweeper
alias(
    name = "sweeper",
    actual = "//pkg/sweeper:sweeper",
)

# pkg/sysmon
alias(
    name = "sysmon",
    actual = "//pkg/sysmon:sysmon",
)

# pkg/version
alias(
    name = "version",
    actual = "//pkg/version:version",
)
